# mapping

./: .gitignore  rosdep.yaml  stack.xml
RGBD_registration/: CMakeLists.txt  exec_in_dir.sh
RGBD_registration/.svn/: all-wcprops  entries
RGBD_registration/.svn/text-base/: manifest.xml.svn-base
RGBD_registration/include/.svn/: all-wcprops  entries
RGBD_registration/include/RGBD_registration/: RGB_feature_detection.h  parameter_server.h  ransac_transformation.h  transformation_estimation_wdf.h
RGBD_registration/include/RGBD_registration/.svn/: all-wcprops  entries
RGBD_registration/launch/.svn/: all-wcprops  entries
RGBD_registration/launch/.svn/text-base/: RGBD_registration.launch.svn-base
RGBD_registration/src/: joint_optimize_wrapper.cpp  main.cpp  parameter_server.cpp  ransac_transformation.cpp
RGBD_registration/src/.svn/: all-wcprops  entries
RGBD_registration/src/.svn/text-base/: RGB_feature_detection.cpp.svn-base  RGB_feature_matcher.cpp.svn-base  pcl_utils.cpp.svn-base  sift_gpu_wrapper.cpp.svn-base  transformation_estimation_wdf.hpp.svn-base
as11/: CMakeLists.txt  as11.rosinstall  (+2 more)
autonomous_mapping/: CMakeLists.txt  README  mainpage.dox  manifest.xml  nodelets.xml
autonomous_mapping/launch/: autonomous_exploration.launch  distance_filter.launch  launchfile.launch  localization.launch  next_best_view.launch
autonomous_mapping/patches/: autonomous_exploration.patch  cart_errors.patch  pr2_compile.patch
autonomous_mapping/scripts/: send_to_pose1.sh  send_to_pose2.sh  send_to_pose3.sh
autonomous_mapping/src/: autonomous_exploration.cpp  distance_filter.cpp  next_best_view.cpp
autonomous_mapping/src/segmentation/: handle_removal.cpp  project_segments.cpp  segment_differences.cpp  segmentation_of_pointcloud.cpp  visualize_segments.cpp
furniture_classification/: CMakeLists.txt  README_NODES.txt  TODO.txt  classification.launch  cmake_install.cmake  converted_pointclouds.launch  live_classification.launch  mainpage.dox  manifest.xml  view_nodes.vcg
furniture_classification/data/: convert_all.sh  eval_clustering.sh  eval_rim_clustering.sh  magic_parameters  plot_clustering_eval.py  precision-recall.txt  train_classifier.sh
furniture_classification/data/models/Armchairs/: Park_Swivel_Armchair_0000F114-centered.vtk
furniture_classification/include/: ransac_simple.h  sac_3dof.h  training.h
furniture_classification/msg/: FittedModels.msg  Hypothesis.msg
furniture_classification/scripts/asp12/: break_parts.sh  icf_classify_subset.cpp  icf_train_subset.sh  readme_zoli.txt  reconstruct_part_links.sh  reconstruct_parts.sh
furniture_classification/src/: classify.cpp  classify_live.cpp  classify_new.cpp  convert.cpp  convert_node.cpp  eval_clustering.cpp  filter_node.cpp  fit_models_node.cpp  generate_hypothesis_node.cpp  region_grow.cpp  sac_test.cpp  scan.cpp  scan.py  scan_test.cpp  split_hypothesis_node.cpp  train.cpp  train_new.cpp  training.cpp
furniture_classification/test/: utest.cpp
pcl_cloud_algos/: CMakeLists.txt  SVN_EXPORT  mainpage.dox  manifest.xml
pcl_cloud_algos/data/: icedtea-ascii.pcd
pcl_cloud_algos/include/pcl_cloud_algos/: box_fit2_algo.h  box_fit_algo.h  cloud_algos.h  depth_image_triangulation.h  global_rsd.h  pcl_cloud_algos_point_types.h  pcl_cloud_algos_point_types.hpp  svm_classification.h
pcl_cloud_algos/launch/: box_fit2.launch  depth_image_triangulation.launch  segment_differences.launch
pcl_cloud_algos/src/pcl_cloud_algos/: box_fit2_algo.cpp  box_fit_algo.cpp  depth_image_triangulation.cpp  global_rsd.cpp  segment_differences.cpp  svm_classification.cpp
pcl_cloud_algos/test/: sigIllDemo.cpp
pcl_cloud_tools/: CMakeLists.txt  SVN_EXPORT  mainpage.dox  manifest.xml
pcl_cloud_tools/action/: GetClusters.action  GetClustersAction.action
pcl_cloud_tools/include/pcl_cloud_tools/: dxf_writer.h  misc.h
pcl_cloud_tools/launch/: box_filter.launch  extract_clusters.launch  extract_clusters_server.launch  laser_table_clusters_detector.launch  normal_estimation_rviz.launch  normal_visualization_nbv.launch  normal_visualization_test_concatenation.launch  pointcloud1_to_pointcloud2_to_pcd.launch  table_cluster_detector_narrow_stereo.launch  table_clusters_detector_laser.launch  table_detector_laser.launch  table_plate_detector_narrow_stereo.launch  virtual_scanner.launch
pcl_cloud_tools/scripts/: build_confusion_array.py  build_confusion_array3.py  convert_ply_to_pcd.py  download_wg_models.sh  generate_pcd.sh  generate_ply.sh  insert_kinect_urdf.py  util.sh  wg_objects_to_ply.py
pcl_cloud_tools/src/: compute_concave_hull.cpp  create_xyzinormal_type.cpp  detect_circle.cpp  detect_circle_3d.cpp  dxf_writer.cpp  extract_clusters_on_table.cpp  extract_clusters_on_table_client.cpp  extract_clusters_on_table_server.cpp  hull_contract.cpp  pad_hull.cpp  pcl_hull_to_polygon.cpp  pcl_normal_visualization.cpp  point_cloud_labeler.cpp  pointcloud_line_pose.cpp  pointcloud_minmax_3d.cpp  pointcloud_to_octree.cpp  pose_logger.cpp  register_views.cpp  transform_pointcloud.cpp  virtual_scanner.cpp  vtk_exporter.cpp  vtk_to_dxf_exporter.cpp  vtk_viewer.cpp
pcl_cloud_tools/srv/: GetClusters.srv
pr2_data_acquisition_tools/: CMakeLists.txt  manifest.xml
pr2_data_acquisition_tools/launch/: amtec_acquire_data.launch  pointcloud_acquisition_with_head_movement.launch
pr2_data_acquisition_tools/scripts/: convert_binary_to_ascii_pcd.sh  filter_nans.sh
pr2_data_acquisition_tools/src/: amtec_acquire_data.cpp  concatenate_point_clouds.cpp  concatenate_point_clouds_main.cpp  filter_nans.cpp  pointcloud_acquisition_with_head_movement.cpp
rgbd_registration/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
rgbd_registration/include/rgbd_registration/: joint_optimize_wrapper.h  pcl_utils.h  ransac_transformation.h  rgb_feature_detection.h  rgb_feature_matcher.h
rgbd_registration/launch/: rgbd_registration.launch
rgbd_registration/src/: joint_optimize_wrapper.cpp  main.cpp  parameter_server.cpp  pcl_utils.cpp  ransac_transformation.cpp  rgb_feature_detection.cpp  rgb_feature_matcher.cpp  sift_gpu_wrapper.cpp
(+197 files in other folders)
